<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center"
    android:id="@+id/level_dialog"
    >

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="3dp"
        android:gravity="center"
        android:orientation="vertical">

        <RadioButton
            android:id="@+id/easy_level"
            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content"
           android:textColor="@color/black"
            android:fontFamily="@font/font2"
            android:layout_gravity="center"
            android:text="@string/easy_lvl"
            android:textSize="25sp" />

        <RadioButton
            android:id="@+id/medium_level"

            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/font2"
            android:layout_gravity="center"
            android:text="@string/medium_lvl"
            android:textSize="25sp"
            />
        <RadioButton
            android:id="@+id/hard_level"

            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/font2"
            android:layout_gravity="center"
            android:text="@string/hard_lvl"
            android:textSize="25sp"
            />
        <RadioButton
            android:id="@+id/super_hard_level"

            android:layout_width="match_parent"
            android:layout_weight="0"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:fontFamily="@font/font2"
            android:layout_gravity="center"
            android:text="@string/super_hard_lvl"
            android:textSize="25sp"
            />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/selectBtn"
        android:text="@string/select_btn"
        android:textColor="@color/black"
        android:fontFamily="@font/font2">
    </Button>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/backBtn"
        android:text="@string/back_btn"
        android:textColor="@color/black"
        android:fontFamily="@font/font2">
    </Button>



</LinearLayout>