<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".FirstScreenActivity"
    android:id="@+id/first_screen_layout"
    android:background="@drawable/first_screen_photo">
    <LinearLayout
        android:id="@+id/home_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingTop="130dp">

        <Button
            android:id="@+id/play_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="140dp"
            android:background="@drawable/ic_yellow_puzzle_button"
            android:fontFamily="@font/font3"
            android:text="@string/play_btn"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/about_btn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/about_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="130dp"
            android:background="@drawable/ic_red_puzzle_button"
            android:fontFamily="@font/font3"
            android:text="@string/about_btn"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/recordsBtn"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:layout_below="@+id/play_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="139dp"

            android:background="@drawable/ic_green_puzzle_btn"
            android:fontFamily="@font/font3"
            android:text="@string/records_btn"
            android:textColor="@color/black"

            android:textSize="20sp" />
    </LinearLayout>

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="2dp"
        android:layout_marginStart="2dp"
        android:layout_marginBottom="140dp"
        android:paddingTop="330dp"
        app:lottie_rawRes="@raw/bluebird"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"/>

</RelativeLayout>